Octave perlin noise sampler